--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,25 +2,25 @@
 
   <div class="main-container">
     <div class="row">
+      <div class="Text">
+        <h1>Kyberturvakysely</h1>
+        <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
+          osa-alueet</p>
 
-      <h1>Kyberturvakysely</h1>
-      <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
-        osa-alueet</p>
 
 
+        <h2 [hidden]="kyselynPiilotus == 1">{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
+        <h2 [hidden]="kyselynPiilotus == 0">Kysymykset ja vastauksesi</h2>
 
-      <h2 [hidden]="kyselynPiilotus == 1">{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
-      <h2 [hidden]="kyselynPiilotus == 0">Kysymykset ja vastauksesi</h2>
-
-      <p [hidden]="kyselynPiilotus == 1" *ngFor="let vastaus of Kysymykset[kysymysIndexi].Vastaukset">
-        <input placeholder="Kysymys" name="id" type="{{Kysymykset[kysymysIndexi].Tyyppi}}"
-          (change)="onCheckboxChange($event, vastaus)">{{vastaus }}
-      </p>
-
-      <button [hidden]="kyselynPiilotus == 1" (click)="seuraavaKysymys()">{{ nappiTeksti }}</button>
-      <button [hidden]="kyselynPiilotus == 1" (click)="edellinenKysymys()">{{ nappiTeksti2
-        }}</button>
-
+        <p [hidden]="kyselynPiilotus == 1" *ngFor="let vastaus of Kysymykset[kysymysIndexi].Vastaukset">
+          <input placeholder="Kysymys" name="id" type="{{Kysymykset[kysymysIndexi].Tyyppi}}"
+            (change)="onCheckboxChange($event, vastaus)">{{vastaus }}
+        </p>
+       </div>
+      <div class="button-container">
+        <button class="button" [hidden]="kyselynPiilotus == 1" (click)="edellinenKysymys()">{{ nappiTeksti2}}</button>
+        <button class="button" [hidden]="kyselynPiilotus == 1" (click)="seuraavaKysymys()">{{ nappiTeksti }}</button>
+      </div>
       <p [hidden]="kyselynPiilotus == 0 " *ngFor="let vastaus of kysymysJaVastaukset">{{vastaus}}</p>
 
 
