--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -53,10 +53,9 @@ body {
 
 .button-container {
 
-    position: sticky;
     /* Kiinnitetään painikecontainer alareunaan */
 
-    position: absolute;
+    position: fixed;
     /* Kiinnitetään painikecontainer alareunaan */
 
 
