--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,22 +7,31 @@
       <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
         osa-alueet</p>
 
+      <div class="kysely" [hidden]="kyselynPiilotus == 1">
+        <h2>{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
 
-      <h2 [hidden]="kyselynPiilotus == 1">{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
-      <h2 [hidden]="kyselynPiilotus == 0">Kysymykset ja vastauksesi</h2>
+        <div class="kysymykset">
+          <p *ngFor="let vastaus of Kysymykset[kysymysIndexi].Vastaukset">
+            <input placeholder="Kysymys" name="id" type="checkbox" (change)="onCheckboxChange($event, vastaus)"
+              [checked]="vastaukset.includes(vastaus)">{{vastaus }}
+          </p>
+        </div>
 
-      <p [hidden]="kyselynPiilotus == 1" *ngFor="let vastaus of Kysymykset[kysymysIndexi].Vastaukset">
-        <input placeholder="Kysymys" name="id" type="{{Kysymykset[kysymysIndexi].Tyyppi}}"
-          (change)="onCheckboxChange($event, vastaus)"
-          [checked]="vastaukset.includes(vastaus)">{{vastaus }}
-      </p>
+      </div>
 
       <button [hidden]="kyselynPiilotus == 1" (click)="seuraavaKysymys()">{{ nappiTeksti }}</button>
       <button [hidden]="kyselynPiilotus == 1" (click)="edellinenKysymys()">{{ nappiTeksti2
         }}</button>
 
-      <p [hidden]="kyselynPiilotus == 0 " *ngFor="let vastaus of kysymysJaVastaukset">{{vastaus}}</p>
-
+      <div class="tulokset" [hidden]="kyselynPiilotus== 0">
+        <h2>Kysymykset ja vastauksesi</h2>
+        <div *ngFor="let vastaus of kysymysJaVastaukset">
+          <h3>{{ vastaus[0] }}</h3>
+          <div *ngFor="let vastaus of vastaus.slice(1)">
+            <p>{{vastaus}}</p>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
