--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,20 @@
+*{
+font-family: "Poppins",sans-serif;
+margin:0;
+padding:0;
+box-sizing: border-box;
+}
+body {
+background-color: black;
+width:100%;
+height: 100dvh;
+display:flex;
+align-items: center;
+justify-content: center;
+background-size: cover;
+background-position: center;
+
+}
 .main-container {
     /*background: linear-gradient(225deg,rgba(29, 20, 148)1%,
     rgb(231, 238, 247)35%,
