--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,31 +1,21 @@
-<<<<<<< HEAD
+
 *{
-font-family: "Poppins",sans-serif;
+font-family:sans-serif;
 margin:0;
 padding:0;
 box-sizing: border-box;
-}
-body {
-background-color: black;
-width:100%;
-height: 100dvh;
-display:flex;
-align-items: center;
-justify-content: center;
-background-size: cover;
-background-position: center;
 
 }
-=======
-html,
 body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
+    width:100%;
+    height: 100dvh;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background-size: cover;
+    background-position: center;
 }
 
->>>>>>> 73ef45e8ea2f681a16e53c1a9916b2a8043c5b93
 .main-container {
     /*background: linear-gradient(225deg,rgba(29, 20, 148)1%,
     rgb(231, 238, 247)35%,
