--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,45 +2,41 @@
 
   <div class="main-container">
     <div class="row">
-      <div class="card">
-        <div class="otsikko">
-          <h1>Kyberturvakysely</h1>
-        </div>
-        <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
-          osa-alueet</p>
 
-        <div class="kysely" [hidden]="kyselynPiilotus == 1">
-          <h2>{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
+      <h1>Kyberturvakysely</h1>
+      <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
+        osa-alueet</p>
 
-          <div class="kysymykset">
-            <p *ngFor="let vastaus of Kysymykset[kysymysIndexi].Vastaukset">
-              <input placeholder="Kysymys" name="id" type="checkbox" (change)="onCheckboxChange($event, vastaus)"
-                [checked]="vastaukset.includes(vastaus)">{{vastaus }}
-            </p>
-          </div>
+      <div class="kysely" [hidden]="kyselynPiilotus == 1">
+        <h2>{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
+
+        <div class="kysymykset">
+          <p *ngFor="let vastaus of Kysymykset[kysymysIndexi].Vastaukset">
+            <input placeholder="Kysymys" name="id" type="checkbox" (change)="onCheckboxChange($event, vastaus)"
+              [checked]="vastaukset.includes(vastaus)">{{vastaus }}
+          </p>
         </div>
-        <div>
-          <div class="tulokset" [hidden]="kyselynPiilotus== 0">
-            <h2>Kysymykset ja vastauksesi</h2>
-            <div *ngFor="let vastaus of kysymysJaVastaukset">
-              <h3>{{ vastaus[0] }}</h3>
-              <div *ngFor="let vastaus of vastaus.slice(1)">
-                <p>{{vastaus}}</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="button-container"[hidden]="kyselynPiilotus == 1">
-          <button class="button" (click)="edellinenKysymys()">{{ nappiTeksti2}}</button>
-          <button class="button" (click)="seuraavaKysymys()">{{ nappiTeksti }}</button>
-        </div>
+
       </div>
+
+      <button [hidden]="kyselynPiilotus == 1" (click)="seuraavaKysymys()">{{ nappiTeksti }}</button>
+      <button [hidden]="kyselynPiilotus == 1" (click)="edellinenKysymys()">{{ nappiTeksti2}}</button>
+
+      <div class="tulokset" [hidden]="kyselynPiilotus== 0">
+        <h2>Kysymykset ja vastauksesi</h2>
+        <div *ngFor="let vastaus of kysymysJaVastaukset">
+          <h3>{{ vastaus[0] }}</h3>
+          <div *ngFor="let vastaus of vastaus.slice(1)">
+            <p>{{vastaus}}</p>
+
+          </div>
+        </div>
+        <div [innerHTML]=aiVastaus></div>
+      </div>
+
     </div>
-
-
-
   </div>
 
-</main>
 
+</main>
 <router-outlet />
