--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,10 +1,3 @@
-html,body {
-    width: clamp(400px,50vm,800px); /*clamp = min, max, and default*/
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* Estää vierityspalkkien näkymisen */
-}
 
 .main-container {
     background: rgb(16, 16, 125);
@@ -23,7 +16,7 @@ html,body {
     color: #f4f5f2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 18px;
-    margin-top: 200px;
+    margin-top: 100px;
     margin-bottom: 200px;
 }
 
@@ -40,34 +33,24 @@ html,body {
     backdrop-filter: blur(10px);
 } */
 
-.otsikko,.h1 {
-    text-align: center;
-    text-transform: uppercase;
-    color: #fff;
-    font-size: 18px;
-    letter-spacing: 10px;
-    text-shadow: 0 0 10px cyan,
-        0 0 20px cyan,
-        0 0 40px cyan,
-        0 0 80px cyan;
-}
 
-/* .button-container {
-    position: fixed;
+
+  .button-container {
+    margin-top: 30px;
     bottom: 5px;
     left: 50%;
-    transform: translateX(-50%);
     display: flex;
+    flex-direction: row;
     gap: 1em;
     justify-content: center;
     margin-bottom: 200px;
-} */
+}  
 
-/* .button {
+button {
     line-height: 1;
     background-color: transparent;
     cursor: pointer;
-    display: flex;
+    /* display: flex; */
     align-items: center;
     margin-top: 1em;
     padding: 0.75em 1em;
@@ -86,20 +69,26 @@ html,body {
     justify-content: center;
 }
 
-.button__icon {
+/* .button__icon {
     width: 1.5em;
     height: 1.5em;
-}
+}  */
 
-.button:hover {
+button:hover {
     border-color: #f4f5f2;
 }
 
-.button:active {
+button:active {
     transform: scale(0.98);
     box-shadow: 0 0.5em 1.5em -0.5em hsla(249, 62%, 51%, 0.745);
-} */
-
+} 
+.kysely {
+    flex-direction: column;
+    gap: 1em;
+    padding: 20px;
+    max-width: 900px;
+    margin: 0 auto;
+}
 .kysymykset {
     display: flex;
     flex-direction: column;
@@ -108,6 +97,7 @@ html,body {
     justify-content: flex-start;
     padding: 20px;
     max-width: 600px;
+    min-width: 600px;
     margin: 0 auto;
 }
 
@@ -128,3 +118,6 @@ html,body {
     margin-right: 0.5em;
     flex-shrink: 0;
 }
+
+
+
