--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,11 +2,11 @@
 
   <div class="main-container">
     <div class="row">
-
-      <h1>Kyberturvakysely</h1>
-      <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
-        osa-alueet</p>
-
+      <div class=" otsikko">
+        <h1>Kyberturvakysely</h1>
+         <p>Tämä kysely kattaa kyberturvallisuuteen liittyvät kysymykset ja se kattaa keskeiset kyberturvallisuuden
+         osa-alueet</p>
+      </div>
       <div class="kysely" [hidden]="kyselynPiilotus == 1">
         <h2>{{ Kysymykset[kysymysIndexi].Kysymys }}</h2>
 
