--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,9 +15,14 @@
     width: 100%;
     color: #f4f5f2;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 18px;
+    font-size: 0.95rem;
     margin-top: 100px;
     margin-bottom: 200px;
+}
+.otsikko p{
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 1rem;
 }
 
 /* .card {
@@ -84,8 +89,8 @@ button:active {
 } 
 .kysely {
     flex-direction: column;
-    gap: 1em;
-    padding: 20px;
+    gap: 1rem;
+    padding: 2rem;
     max-width: 900px;
     margin: 0 auto;
 }
@@ -96,8 +101,8 @@ button:active {
     align-items: flex-start;
     justify-content: flex-start;
     padding: 20px;
-    max-width: 600px;
-    min-width: 600px;
+    max-width: 40rem;
+    min-width: 25rem;
     margin: 0 auto;
 }
 
@@ -118,6 +123,7 @@ button:active {
     margin-right: 0.5em;
     flex-shrink: 0;
 }
+
 
 
 
